# addr-spec-rs

./: .clang-tidy  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deny.toml  release-please-config.json
.github/: release-please-config.json  renovate.json
.github/actions/cargo-cache/: action.yaml
.github/workflows/: benchmark.yaml  ci.yaml  ci.yml  docs.yaml  publish.yaml  release-notes.yml  release.yaml
src/: ascii.c  ascii.h  ascii.rs  lib.rs  parser.rs  unicode.rs
tools/: cargo-coverage.py  cargo-test-runner.py
