[package]
name = "addr-spec"
version = "0.7.1"
edition = "2021"
description = "A wicked fast UTF-8 email address parser and serializer."
license = "MIT OR Apache-2.0"
authors = ["Mathematic Inc"]
documentation = "https://mathematic-inc.github.io/addr-spec-rs"
repository = "https://github.com/mathematic-inc/addr-spec-rs"
categories = ["parsing", "email"]
keywords = ["address", "rfc5322", "rfc2822"]

[features]
default = ["normalization"]
comments = ["white-spaces"]
literals = []
normalization = ["dep:icu_normalizer"]
white-spaces = []

[dependencies]
icu_normalizer = { version = "1.3.0", optional = true }

serde = { version = "1.0", optional = true, features = ["derive"] }
email_address = { version = "0.2.4", optional = true }

[dev-dependencies]
regex = "1.7.1"

[build-dependencies]
rustc_version = "0.4.0"

[profile.release]
lto = true
