[package]
name = "addr-spec"
version = "0.9.1"
edition = "2021"
description = "A wicked fast UTF-8 email address parser and serializer."
license = "Apache-2.0"
authors = ["Mathematic Inc"]
documentation = "https://mathematic-inc.github.io/addr-spec-rs"
repository = "https://github.com/mathematic-inc/addr-spec-rs"
categories = ["parsing", "text-processing"]
keywords = ["email", "address", "parser", "rfc5322", "rfc2822"]

[features]
default = ["normalization"]
comments = ["white-spaces"]
literals = []
normalization = ["dep:unicode-normalization"]
white-spaces = []
nightly = []

[dependencies]
unicode-normalization = { version = "0.1.23", optional = true, default-features = false }

serde = { version = "1.0.217", optional = true, default-features = false, features = [
  "alloc",
  "derive",
] }
email_address = { version = "0.2.4", optional = true, default-features = false }

[dev-dependencies]
regex = "1.10.4"

[build-dependencies]
rustc_version = "0.4"

[profile.release]
lto = true
